--- a/src/main/resources/static/flay-list.html
+++ b/src/main/resources/static/flay-list.html
@@ -7,9 +7,10 @@
 		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 		<link rel="stylesheet" href="base/base.css" />
 		<link rel="stylesheet" href="flay-list.css" />
-		<script src="/webjars/jquery/jquery.min.js"></script>
-		<script src="base/base.js"></script>
-		<script src="base/flay-utils.js"></script>
+		<script defer src="/webjars/jquery/jquery.min.js"></script>
+		<script defer src="base/base.js"></script>
+		<script defer src="base/flay-utils.js"></script>
+		<script defer src="flay-list.js"></script>
 	</head>
 	<body>
 		<header>
@@ -40,7 +41,5 @@
 				<label>Order: <span id="order"></span></label>
 			</div>
 		</footer>
-
-		<script src="flay-list.js"></script>
 	</body>
 </html>
